# aoc

2022/: LICENSE.md  README.md  adventofcode.cabal
2022/day01/: Main.hs
2022/day02/: Main.hs
2022/day03/: Main.hs
2022/day04/: Main.hs
2022/day05/: Main.hs
2022/day06/: Main.hs
2022/day07/: Main.hs
2022/day08/: Main.hs
2022/day09/: Main.hs
2022/day10/: Main.hs
2022/day11/: Main.hs  Parser.hs
2022/utils/: AocLib.hs
2024/: LICENSE.md  Makefile  Readme.md  go.mod  main.go.tpl
2024/cmd/day01/: main.go
2024/cmd/day02/: main.go
2024/cmd/day03/: main.go
2024/cmd/day04/: main.go
2024/cmd/day05/: main.go
2024/cmd/day06/: main.go
2024/cmd/day07/: main.go
2024/cmd/day08/: main.go
2024/cmd/day09/: main.go
2024/cmd/day10/: main.go
2024/cmd/day11/: main.go
2024/cmd/day12/: main.go
2024/cmd/day13/: main.go
2024/cmd/day14/: main.go
2024/cmd/day15/: main.go
2024/cmd/day16/: main.go
2024/cmd/day17/: main.go
2024/cmd/day18/: main.go
2024/cmd/day19/: main.go
2024/cmd/day20/: main.go
2024/cmd/day21/: main.go
2024/cmd/day22/: main.go
2024/cmd/day23/: main.go
2024/cmd/day24/: main.go
2024/cmd/day25/: main.go
2024/pkg/graphs/: graphs.go
2024/pkg/util/: flags.go  input.go
2025/: LICENSE.md  Readme.md  go.mod  main.go.tpl  main_gen.sh
2025/cmd/day01/: main.go
2025/cmd/day02/: main.go
2025/cmd/day03/: main.go
2025/cmd/day04/: main.go
2025/cmd/day05/: main.go
2025/cmd/day06/: main.go
2025/cmd/day07/: main.go
2025/cmd/day08/: main.go
2025/cmd/day09/: main.go
2025/cmd/day10/: main.go
2025/cmd/day11/: main.go
2025/cmd/day12/: main.go
2025/pkg/graphs/: graphs.go
2025/pkg/util/: flags.go  info.go  input.go
