cabal-version:      2.4
name:               adventofcode
version:            0.1.0.0

author:             Miroslav Jaros
maintainer:         mirek@mijaros.cz

extra-source-files: CHANGELOG.md

library aocutil
    hs-source-dirs: utils
    exposed-modules: AocLib
    build-depends:    
        base ^>=4.15.1.0,
        split,
    default-language: Haskell2010

executable day01
    main-is:          Main.hs

    build-depends:    
        aocutil,
        base ^>=4.15.1.0,
        split
    hs-source-dirs:     day01 
    default-language:   Haskell2010

executable day02
    main-is:    Main.hs
    build-depends:    
        aocutil,
        base ^>=4.15.1.0,
        split
    hs-source-dirs:  day02
    default-language: Haskell2010

executable day03
    main-is:    Main.hs
    build-depends:    
        aocutil,
        base ^>=4.15.1.0,
        split
    hs-source-dirs:  day03
    default-language: Haskell2010

executable day04
    main-is:    Main.hs
    build-depends:    
        aocutil,
        base ^>=4.15.1.0,
        split
    hs-source-dirs: day04
    default-language: Haskell2010

executable day05
    main-is:    Main.hs
    build-depends:    
        aocutil,
        base ^>=4.15.1.0,
        split,
        regex-posix
    hs-source-dirs: day05
    default-language: Haskell2010

executable day06
    main-is:    Main.hs
    build-depends:    
        aocutil,
        base ^>=4.15.1.0,
        split
    hs-source-dirs: day06
    default-language: Haskell2010

executable day07
    main-is:    Main.hs
    build-depends:    
        aocutil,
        base ^>=4.15.1.0,
        split,
        parsec
    hs-source-dirs: day07
    default-language: Haskell2010

executable day08
    main-is:    Main.hs
    build-depends:    
        aocutil,
        base ^>=4.15.1.0,
        split,
        parsec
    hs-source-dirs: day08
    default-language: Haskell2010

executable day09
    main-is:    Main.hs
    build-depends:    
        aocutil,
        base ^>=4.15.1.0,
        split,
        parsec
    hs-source-dirs: day09
    default-language: Haskell2010

executable day10
    main-is:    Main.hs
    build-depends:    
        aocutil,
        base ^>=4.15.1.0,
        split,
    hs-source-dirs: day10
    default-language: Haskell2010

executable day11
    main-is:    Main.hs
    other-modules: Parser
    build-depends:    
        aocutil,
        base ^>=4.15.1.0,
        split,
        parsec
    hs-source-dirs: day11
    default-language: Haskell2010
